<resources>
    <string name="app_name">Denarii</string>
    <string name="user_info_next">Next</string>
    <string name="user_info_enter_name_text">Name</string>
    <string name="user_info_enter_name_hint">Your name</string>
    <string name="user_info_enter_email_hint">Your email</string>
    <string name="user_info_enter_email_text">Email</string>
    <string name="welcome_to_denarii_text">Welcome to Denarii!</string>
    <string name="main_next_text">Next</string>
    <string name="restore_deterministic_wallet_text">Restore Deterministic Wallet</string>
    <string name="open_wallet_text">Open Wallet</string>
    <string name="create_wallet_text">Create Wallet</string>
    <string name="wallet_seed_text">Seed</string>
    <string name="wallet_name_text">Wallet Name</string>
    <string name="wallet_password_text">Wallet Password</string>
    <string name="confirm_wallet_password_text">Confirm Wallet Password</string>
    <string name="create_wallet_submit_text">Submit</string>
    <string name="create_wallet_failure_text">Failure</string>
    <string name="create_wallet_success_text">Success</string>
    <string name="open_wallet_seed_text">Seed</string>
    <string name="open_wallet_submit_text">Submit</string>
    <string name="open_wallet_failure_text">Failure</string>
    <string name="open_wallet_success_text">Success</string>
    <string name="open_wallet_password_text">Wallet Password</string>
    <string name="open_wallet_name_text">Wallet Name</string>
    <string name="restore_wallet_success_text">Success</string>
    <string name="restore_wallet_failure_text">Failure</string>
    <string name="restore_wallet_submit_text">Submit</string>
    <string name="restore_wallet_seed_text">Wallet Seed</string>
    <string name="restore_wallet_password_text">Wallet Password</string>
    <string name="restore_wallet_name_text">Wallet Name</string>
    <string name="user_info_success_text">Success</string>
    <string name="user_info_failure_text">Failure</string>
    <string name="opened_wallet_balance_text">Balance</string>
    <string name="opened_wallet_success_text">Success</string>
    <string name="opened_wallet_failure_text">Failure</string>
    <string name="opened_wallet_send_text">Send</string>
    <string name="opened_wallet_send_to_text">Send To</string>
    <string name="opened_wallet_amount_to_send_text">Amount to Send</string>
    <string name="opened_wallet_refresh_balance_text">Refresh Balance</string>
    <string name="opened_wallet_address_text">Own Address</string>
    <string name="user_info_submit_text">Submit</string>
    <string name="user_info_password_text">Your Password</string>
    <string name="login_or_register_login_text">Login</string>
    <string name="login_or_register_register_text">Register</string>
    <string name="login_submit_text">Submit</string>
    <string name="login_next_text">Next</string>
    <string name="login_failure_text">Failure</string>
    <string name="login_success_text">Success</string>
    <string name="login_name_text">Your Name</string>
    <string name="login_password_text">Your Password</string>
    <string name="login_email_text">Your Email</string>
    <string name="register_confirm_password_text">Confirm Password</string>
    <string name="register_submit_text">Submit</string>
    <string name="register_failure_text">Failure</string>
    <string name="register_success_text">Success</string>
    <string name="register_next_text">Next</string>
    <string name="register_email_text">Your Email</string>
    <string name="register_name_text">Your Name</string>
    <string name="register_password_text">Your Password</string>
    <string name="login_forgot_password_text">Forgot Password?</string>
    <string name="request_reset_username_or_email_text">Username or Email</string>
    <string name="request_reset_text">Request Reset</string>
    <string name="reset_password_reset_password_text">Reset Password</string>
    <string name="reset_password_name_text">Your Name</string>
    <string name="reset_password_email_text">Your Email</string>
    <string name="reset_password_password_text">Your New Password</string>
    <string name="reset_password_confirm_password_text">Confirm New Password</string>
    <string name="verify_reset_verify_reset_text">Verify Reset</string>
    <string name="verify_reset_reset_id_text">Reset Id</string>
    <string name="request_reset_next_text">Next</string>
    <string name="reset_password_next_text">Next</string>
    <string name="verify_reset_next_text">Next</string>
    <string name="create_wallet_next_button_text">Next</string>
    <string name="open_wallet_next_text">Next</string>
    <string name="restore_wallet_next_text">Next</string>
    <string name="opened_wallet_seed_text">Seed: </string>
    <string name="title_activity_buy_denarii">BuyDenarii</string>
    <string name="buy_amount_header">Amount: </string>
    <string name="buy_price_header">Price: </string>
    <string name="buy_denarii_header">Buy Denarii</string>
    <string name="buy_regardless_of_price">Buy Regardless of Price</string>
    <string name="fail_if_full_amount">Fail If Full Amount Not Met</string>
    <string name="ask_header">Asks</string>
    <string name="ask_amount">Amount</string>
    <string name="ask_price">Price</string>
    <string name="queued_buys">Queued Buys</string>
    <string name="queued_buy_total_amount">Total Amount</string>
    <string name="queued_buy_price">Price</string>
    <string name="queued_buy_amount_bought">Amount Bought</string>
    <string name="queued_buy_cancel_buy">Cancel Buy</string>
    <string name="sell_denarii">Sell Denarii</string>
    <string name="going_price">Going Price: </string>
    <string name="asks_sell_header">Asks</string>
    <string name="asks_sell_amount">Amount</string>
    <string name="asks_sell_price">Price</string>
    <string name="new_sell_amount">Amount: </string>
    <string name="new_sell_price">Price: </string>
    <string name="own_asks">Own Asks</string>
    <string name="own_asks_amount">Amount</string>
    <string name="own_asks_price">Price</string>
    <string name="own_asks_cancel_sell">Cancel Sell</string>
    <string name="pending_sales">Pending Sales</string>
    <string name="pending_sales_amount">Amount</string>
    <string name="pending_sales_price">Price</string>
    <string name="pending_sales_amount_bought">Amount Bought</string>
    <string name="create_support_ticket_header">Create Support Ticket</string>
    <string name="create_support_ticket_title">Title</string>
    <string name="create_support_ticket_description">Description</string>
    <string name="create_support_ticket_submit">Submit</string>
    <string name="support_ticket_header">Support Tickets</string>
    <string name="credit_card_info_header">Credit Card Info</string>
    <string name="credit_card_info_status">Status: Not Set</string>
    <string name="credit_card_info_number">Card Number</string>
    <string name="credit_card_info_expiration">Expiration Date</string>
    <string name="credit_card_info_security">Security Code</string>
    <string name="credit_card_info_submit">Submit</string>
    <string name="credit_card_info_clear">Clear Card Info</string>
    <string name="verification_header">Verification</string>
    <string name="verification_status">Status: Not Verified</string>
    <string name="verification_firstname">First Name</string>
    <string name="verification_middle">Middile Initial</string>
    <string name="verification_lastname">Last Name</string>
    <string name="verification_email">Email</string>
    <string name="verification_dob">Date of Birth</string>
    <string name="verification_ssn">Social Security Number</string>
    <string name="verification_zipcode">Zip Code</string>
    <string name="verification_phone">Phone Number</string>
    <string name="verification_workcity">Work City</string>
    <string name="verification_workstate">Work State</string>
    <string name="verification_workcountry">Work Country</string>
    <string name="verification_submit">Submit</string>
    <string name="support_ticket_details_header">Support Ticket Details</string>
    <string name="support_ticket_details_title">Placeholder Title</string>
    <string name="support_ticket_details_description">Placeholder Description</string>
    <string name="support_ticket_details_comment_box">Add Comment Here</string>
    <string name="support_ticket_details_comment_box_submit">Submit</string>
    <string name="user_settings_header">User Settings</string>
    <string name="user_settings_support_tickets">Support Tickets</string>
    <string name="user_settings_delete_account">Delete Account</string>
    <string name="wallet_name_menu_text">Wallet</string>
    <string name="buy_denarii_menu_text">Buy Denarii</string>
    <string name="sell_denarii_menu_text">Sell Denarii</string>
    <string name="verification_menu_text">Verification</string>
    <string name="credit_card_info_menu_text">Credit Card</string>
    <string name="main_menu_title">Denarii</string>
    <string name="settings_menu_text">Settings</string>
    <string name="logout_button_text">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="credit_card_info_has_info_status">Status: Have Info Set</string>
    <string name="credit_card_info_does_not_have_info_status">Status: No Info Set</string>
    <string name="verification_verified_status">Status: Verified</string>
    <string name="verification_failed_status">Status: Failed Verification</string>
    <string name="verification_pending_status">Status: Verification Pending</string>
    <string name="verification_not_yet_status">Status: Not Verified Yet</string>
    <string name="verification_unknown_status">Status: Unknown</string>
    <string name="navigate_to_support_ticket_button_default">Navigate to Support Ticket</string>
    <string name="ask_amount_default">Ask Amount</string>
    <string name="ask_price_default">Ask Price</string>
    <string name="ask_amount_bought_default">Ask Amount Bought</string>
    <string name="ask_cancel_default">Cancel Ask Or Buy</string>
    <string name="comment_author_default">Comment Author</string>
    <string name="comment_body_default">Comment Body</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="submit">Submit</string>
    <string name="total_amount">Total Amount</string>
</resources>