<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/verification_layout"
    tools:context=".activities.verification.Verification">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/verification_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/verificationHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verification_header"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@id/verificationStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verification_toolbar" />

    <TextView
        android:id="@+id/verificationStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verification_status"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/firstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verificationHeader" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:inputType="text"
        android:text="@string/verification_firstname"
        app:layout_constraintBottom_toTopOf="@id/lastName"
        app:layout_constraintEnd_toStartOf="@id/middleInitial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verificationStatus" />

    <EditText
        android:id="@+id/middleInitial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:inputType="text"
        android:text="@string/verification_middle"
        app:layout_constraintBottom_toTopOf="@id/lastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/firstName"
        app:layout_constraintTop_toBottomOf="@id/verificationStatus" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:inputType="text"
        android:text="@string/verification_lastname"
        app:layout_constraintBottom_toTopOf="@id/dateOfBirth"
        app:layout_constraintEnd_toStartOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstName" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:inputType="textEmailAddress"
        android:text="@string/verification_email"
        app:layout_constraintBottom_toTopOf="@id/dateOfBirth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/lastName"
        app:layout_constraintTop_toBottomOf="@id/middleInitial" />

    <EditText
        android:id="@+id/dateOfBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@id/zipCode"
        app:layout_constraintEnd_toStartOf="@id/socialSecurityNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastName"
        tools:text="@string/verification_dob" />

    <EditText
        android:id="@+id/socialSecurityNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:inputType="number"
        android:text="@string/verification_ssn"
        app:layout_constraintBottom_toTopOf="@id/zipCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dateOfBirth"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <EditText
        android:id="@+id/zipCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:inputType="number"
        android:text="@string/verification_zipcode"
        app:layout_constraintBottom_toTopOf="@id/workCity"
        app:layout_constraintEnd_toStartOf="@id/verificationPhoneNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateOfBirth" />

    <EditText
        android:id="@+id/verificationPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:inputType="phone"
        android:text="@string/verification_phone"
        app:layout_constraintBottom_toTopOf="@id/workCity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/zipCode"
        app:layout_constraintTop_toBottomOf="@id/socialSecurityNumber" />

    <EditText
        android:id="@+id/workCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:inputType="text"
        android:text="@string/verification_workcity"
        app:layout_constraintBottom_toTopOf="@id/workState"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verificationPhoneNumber" />

    <EditText
        android:id="@+id/workState"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="8"
        android:inputType="text"
        android:text="@string/verification_workstate"
        app:layout_constraintBottom_toTopOf="@id/workCountry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/workCity" />

    <EditText
        android:id="@+id/workCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:inputType="text"
        android:text="@string/verification_workcountry"
        app:layout_constraintBottom_toTopOf="@id/verificationSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/workState" />

    <Button
        android:id="@+id/verificationSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification_submit"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/workCountry" />

</androidx.constraintlayout.widget.ConstraintLayout>