<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.selldenarii.SellDenarii">

    <TextView
        android:id="@+id/sellDenarii"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/sell_denarii"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/goingPrices"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/goingPrices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/going_price"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/asks_sell"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sellDenarii" />

    <TextView
        android:id="@+id/asks_sell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/sellAsksAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goingPrices"
        tools:text="@string/asks_sell_header" />

    <TextView
        android:id="@+id/sellAsksAmount"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/asks_sell_amount"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/sellAsksAmount"
        app:layout_constraintEnd_toStartOf="@id/sellAsksPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/asks_sell" />

    <TextView
        android:id="@+id/sellAsksPrice"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:text="@string/asks_sell_price"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/sellAsksPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/sellAsksAmount"
        app:layout_constraintTop_toBottomOf="@id/asks_sell" />


    <EditText
        android:id="@+id/sellAmount"
        android:layout_width="153dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/new_sell_amount"
        app:layout_constraintBottom_toTopOf="@id/submitSell"
        app:layout_constraintEnd_toStartOf="@id/sellPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sellAsksAmount"
        android:autofillHints="1.0" />

    <EditText
        android:id="@+id/sellPrice"
        android:layout_width="156dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/new_sell_price"
        app:layout_constraintBottom_toTopOf="@id/submitSell"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/sellAmount"
        app:layout_constraintTop_toBottomOf="@id/sellAsksPrice"
        android:autofillHints="10.0" />

    <Button
        android:id="@+id/submitSell"
        android:layout_width="221dp"
        android:layout_height="62dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toTopOf="@id/ownAsks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sellAmount" />

    <TextView
        android:id="@+id/ownAsks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/own_asks"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/ownAsksAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/submitSell" />

    <TextView
        android:id="@+id/ownAsksAmount"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:text="@string/own_asks_amount"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/pendingSales"
        app:layout_constraintEnd_toStartOf="@id/ownAsksPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ownAsks" />

    <TextView
        android:id="@+id/ownAsksPrice"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:text="@string/own_asks_price"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/pendingSales"
        app:layout_constraintEnd_toStartOf="@id/ownAsksCancelBuy"
        app:layout_constraintStart_toEndOf="@id/ownAsksAmount"
        app:layout_constraintTop_toBottomOf="@id/ownAsks" />

    <TextView
        android:id="@+id/ownAsksCancelBuy"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:text="@string/own_asks_cancel_buy"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/pendingSales"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ownAsksPrice"
        app:layout_constraintTop_toBottomOf="@id/ownAsks" />


    <TextView
        android:id="@+id/pendingSales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pending_sales"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/pendingSalesAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ownAsksPrice" />


    <TextView
        android:id="@+id/pendingSalesAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pending_sales_amount"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/pendingSalesPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pendingSales" />

    <TextView
        android:id="@+id/pendingSalesPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pending_sales_price"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/pendingSalesAmountBought"
        app:layout_constraintStart_toEndOf="@id/pendingSalesAmount"
        app:layout_constraintTop_toBottomOf="@id/pendingSales" />

    <TextView
        android:id="@+id/pendingSalesAmountBought"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pending_sales_amount_bought"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/pendingSalesPrice"
        app:layout_constraintTop_toBottomOf="@id/pendingSales" />

</androidx.constraintlayout.widget.ConstraintLayout>