<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/buy_denarii_queued_buys_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/buyAmountTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_amount"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buyPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/buyPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/queued_buy_price"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buyAmountBought"
        app:layout_constraintStart_toEndOf="@id/buyAmountTotal"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/buyAmountBought"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/queued_buy_amount_bought"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buyCancelBuy"
        app:layout_constraintStart_toEndOf="@id/buyPrice"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/buyCancelBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/queued_buy_cancel_buy"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buyAmountBought"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>